# emulica-core

./: .gitignore  AboutEmulicaDialog.py  README.md  controler.py  emuML.py  emulation.py  modelling.py  plot.py  properties.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-publish.yml  pythonpackage.yml
core/: AboutEmulicaDialog.py  ModelPropertiesDialog.py  __init__.py  canvas.py  controler.py  emuML.py  emulation.py  modelling.py  plot.py  properties.py  propertiesDialog.py
emulica/: EmulicaExecDialog.py  EmulicaWindow.py  ModuleSelectionDialog.py  PreferencesEmulicaDialog.py  canvas.py  control.py  controler.py  emuML.py  emulation.py  results.py
emulica/core/: CommandManager.py  controler.py  emuML.py  emulation.py
src/emulica/core/: __init__.py  controler.py  emuML.py  emulation.py  plot.py  properties.py
tests/: bug1.py  set_path.py  test_absobs.py  test_bug1.py  test_holderstate.py  test_plot.py  test_server.py  test_setupmatrix.py  test_sim1.py  test_sim10.py  test_sim11.py  test_sim12.py  test_sim13.py  test_sim14.py  test_sim15.py  test_sim16.py  test_sim17.py  test_sim18.py  test_sim19.py  test_sim2.py  test_sim20.py  test_sim21.py  test_sim22.py  test_sim3.py  test_sim4.py  test_sim5.py  test_sim6.py  test_sim7.py  test_sim8.py  test_sim9.py  util.py
tests/data/: bad_no_emu.emu  bad_no_model.emu  bad_no_props.emu  cell.emu  cell.xml  sim1.emu  sim1.xml  sim14.xml  sim15.emu  sim15.xml  sim15_bad_submodel.emu  sim1_renaming.xml  sim4.emu  sim4.xml  sim6.ods  sim7.xml  sim8.xml
tests/data/old-xml/: cell.xml  sim1.xml  sim14.xml  (+4 more)
